Update kafka role bindings batch
